<resources>
    <string name="app_name">Telegram Profile UI</string>
    <string name="name">Febronia Sameh</string>
    <string name="onlin">Online</string>
    <string name="account">Account</string>
    <string name="Phone_num">+20 125-307-8351</string>
    <string name="tap_to_change_phone_number">Tap to change phone number</string>
    <string name="user">febronia_sameh</string>
    <string name="username">username</string>
    <string name="bio">Bio</string>
    <string name="add_a_few_words_about_yourself">Add a few words about yourself</string>
    <string name="settings">Settings</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="notifications_and_sounds">Notifications and Sounds</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="power_saving">Power Saving</string>
    <string name="chat_folders">Chat Folders</string>
    <string name="devices">Devices</string>
    <string name="language">Language</string>
    <string name="language_type">English</string>
    <string name="telegram_premuim">Telegram Premuim</string>
    <string name="help">Help</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="faq">Telegram FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>