<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity"
    android:id="@+id/main_info"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:src="@drawable/more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:src="@drawable/qr"
        app:layout_constraintEnd_toStartOf="@id/more"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/profile_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/send_msg_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/circle"
        android:scaleType="centerInside"
        android:src="@drawable/camera"
        tools:layout_editor_absoluteX="316dp"
        tools:layout_editor_absoluteY="177dp"
        />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="130dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_main_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onlin"
        android:textColor="@color/white_text"
        android:textSize="@dimen/meduim_text_size"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/profile_pic">

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- info -->
                <TextView
                    android:id="@+id/account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:paddingStart="@dimen/large_margin"
                    android:text="@string/account"
                    android:textColor="@color/blue_text"
                    android:textSize="@dimen/large_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:paddingStart="@dimen/large_margin"
                    android:text="@string/Phone_num"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/meduim_text_size"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:paddingStart="@dimen/large_margin"
                    android:text="@string/tap_to_change_phone_number"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/small_text"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:paddingStart="@dimen/large_margin"
                    android:text="@string/user"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/meduim_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:paddingStart="@dimen/large_margin"
                    android:text="@string/username"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/small_text"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:paddingStart="@dimen/large_margin"
                    android:text="@string/bio"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/meduim_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:paddingStart="@dimen/large_margin"
                    android:text="@string/add_a_few_words_about_yourself"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/small_text"

                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_margin"
                android:background="@color/white_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- settings -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    android:text="@string/settings"
                    android:textColor="@color/blue_text"
                    android:textSize="@dimen/large_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/large_margin"
                    android:drawableStart="@drawable/chat"
                    android:drawablePadding="@dimen/small_margin"
                    android:text="@string/chat_settings"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/meduim_text_size" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/large_margin"
                    android:drawableStart="@drawable/privacy"
                    android:drawablePadding="@dimen/small_margin"
                    android:text="@string/privacy_and_security"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/meduim_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/large_margin"
                    android:drawableStart="@drawable/notification"
                    android:drawablePadding="@dimen/small_margin"
                    android:text="@string/notifications_and_sounds"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/meduim_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/large_margin"
                    android:drawableStart="@drawable/storage"
                    android:drawablePadding="@dimen/small_margin"
                    android:text="@string/data_and_storage"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/meduim_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/large_margin"
                    android:drawableStart="@drawable/power"
                    android:drawablePadding="@dimen/small_margin"
                    android:text="@string/power_saving"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/meduim_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/large_margin"
                    android:drawableStart="@drawable/folder"
                    android:drawablePadding="@dimen/small_margin"
                    android:text="@string/chat_folders"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/meduim_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/large_margin"
                    android:drawableStart="@drawable/devices"
                    android:drawablePadding="@dimen/small_margin"
                    android:text="@string/devices"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/meduim_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white_blue" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/language"
                        android:drawablePadding="@dimen/small_margin"
                        android:text="@string/language"
                        android:textColor="@color/white_text"
                        android:textSize="@dimen/meduim_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/large_margin"
                        android:text="@string/language_type"
                        android:textColor="@color/blue_text" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_margin"
                android:background="@color/white_blue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/large_margin"
                android:drawableStart="@drawable/premium"
                android:drawablePadding="@dimen/small_margin"
                android:text="@string/telegram_premuim" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_margin"
                android:background="@color/white_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Help -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/large_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    android:text="@string/help"
                    android:textColor="@color/blue_text"
                    android:textSize="@dimen/large_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/large_margin"
                    android:drawableStart="@drawable/chat"
                    android:drawablePadding="@dimen/small_margin"
                    android:text="@string/ask_a_question"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/meduim_text_size"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white_blue" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/large_margin"
                    android:drawableStart="@drawable/question_mark"
                    android:drawablePadding="@dimen/small_margin"
                    android:text="@string/faq"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/meduim_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/large_margin"
                    android:drawableStart="@drawable/privacy"
                    android:drawablePadding="@dimen/small_margin"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/meduim_text_size" />


            </LinearLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>